@@ -218,7 +218,7 @@ SCIP_RETCODE writeBounds(
             submipdb = SCIP_INVALID;
             valid = FALSE;
 	    cutoff = FALSE;
-            SCIP_CALL( SCIPcopy(scip, subscip, varmap, NULL, "__boundwriting", TRUE, FALSE, &valid) );
+            SCIP_CALL( SCIPcopy(scip, subscip, varmap, NULL, "__boundwriting", TRUE, FALSE, TRUE, &valid) );
 
             if( valid )
             {
